--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2131,12 +2131,12 @@
     case 4:
       return "mov{l}\t{%1, %0|%0, %1}";
     case 5:
-      if (TARGET_SSE2 && !TARGET_ATHLON)
+      if (get_attr_mode (insn) == MODE_TI)
 	return "pxor\t%0, %0";
       else
 	return "xorps\t%0, %0";
     case 6:
-      if (TARGET_PARTIAL_REG_DEPENDENCY)
+      if (get_attr_mode (insn) == MODE_V4SF)
 	return "movaps\t{%1, %0|%0, %1}";
       else
 	return "movss\t{%1, %0|%0, %1}";
@@ -2156,7 +2156,40 @@
     }
 }
   [(set_attr "type" "fmov,fmov,fmov,imov,imov,ssemov,ssemov,ssemov,ssemov,mmxmov,mmxmov,mmxmov")
-   (set_attr "mode" "SF,SF,SF,SI,SI,TI,SF,SF,SF,SI,SI,DI")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "3,4,9,10")
+		 (const_string "SI")
+	       (eq_attr "alternative" "5")
+		 (if_then_else
+		   (and (and (ne (symbol_ref "TARGET_SSE_LOAD0_BY_PXOR")
+			    	 (const_int 0))
+			     (ne (symbol_ref "TARGET_SSE2")
+				 (const_int 0)))
+			(eq (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "TI")
+		   (const_string "V4SF"))
+	       /* For architectures resolving dependencies on
+		  whole SSE registers use APS move to break dependency
+		  chains, otherwise use short move to avoid extra work. 
+
+		  Do the same for architectures resolving dependencies on
+		  the parts.  While in DF mode it is better to always handle
+		  just register parts, the SF mode is different due to lack
+		  of instructions to load just part of the register.  It is
+		  better to maintain the whole registers in single format
+		  to avoid problems on using packed logical operations.  */
+	       (eq_attr "alternative" "6")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_PARTIAL_REG_DEPENDENCY")
+			    (const_int 0))
+			(ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "SF"))
+	       (eq_attr "alternative" "11")
+		 (const_string "DI")]
+	       (const_string "SF")))])
 
 (define_insn "*swapsf"
   [(set (match_operand:SF 0 "register_operand" "+f")
@@ -2317,25 +2350,78 @@
     case 4:
       return "#";
     case 5:
-      if (TARGET_ATHLON)
-        return "xorpd\t%0, %0";
-      else
-        return "pxor\t%0, %0";
+      switch (get_attr_mode (insn))
+	{
+	case MODE_V4SF:
+	  return "xorps\t%0, %0";
+	case MODE_V2DF:
+	  return "xorpd\t%0, %0";
+	case MODE_TI:
+	  return "pxor\t%0, %0";
+	default:
+	  abort ();
+	}
     case 6:
-      if (TARGET_PARTIAL_REG_DEPENDENCY)
-	return "movapd\t{%1, %0|%0, %1}";
+      switch (get_attr_mode (insn))
+	{
+	case MODE_V4SF:
+	  return "movaps\t{%1, %0|%0, %1}";
+	case MODE_V2DF:
+	  return "movapd\t{%1, %0|%0, %1}";
+	case MODE_DF:
+	  return "movsd\t{%1, %0|%0, %1}";
+	default:
+	  abort ();
+	}
+    case 7:
+      if (get_attr_mode (insn) == MODE_V2DF)
+	return "movlpd\t{%1, %0|%0, %1}";
       else
 	return "movsd\t{%1, %0|%0, %1}";
-    case 7:
     case 8:
-        return "movsd\t{%1, %0|%0, %1}";
+      return "movsd\t{%1, %0|%0, %1}";
 
     default:
       abort();
     }
 }
   [(set_attr "type" "fmov,fmov,fmov,multi,multi,ssemov,ssemov,ssemov,ssemov")
-   (set_attr "mode" "DF,DF,DF,SI,SI,TI,DF,DF,DF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "3,4")
+		 (const_string "SI")
+	       /* xorps is one byte shorter.  */
+	       (eq_attr "alternative" "5")
+		 (cond [(ne (symbol_ref "optimize_size")
+			    (const_int 0))
+			  (const_string "V4SF")
+			(ne (symbol_ref "TARGET_SSE_LOAD0_BY_PXOR")
+			    (const_int 0))
+			  (const_string "TI")]
+		       (const_string "V2DF"))
+	       /* For architectures resolving dependencies on
+		  whole SSE registers use APD move to break dependency
+		  chains, otherwise use short move to avoid extra work.
+
+		  movaps encodes one byte shorter.  */
+	       (eq_attr "alternative" "6")
+		 (cond
+		  [(ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		     (const_string "V4SF")
+		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REG_DEPENDENCY")
+		       (const_int 0))
+		     (const_string "V2DF")]
+		   (const_string "DF"))
+	       /* For achitectures resolving dependencies on register
+		  parts we may avoid extra work to zero out upper part
+		  of register.  */
+	       (eq_attr "alternative" "7")
+		 (if_then_else
+		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+		       (const_int 0))
+		   (const_string "V2DF")
+		   (const_string "DF"))]
+	       (const_string "DF")))])
 
 (define_insn "*movdf_integer"
   [(set (match_operand:DF 0 "nonimmediate_operand" "=f#Yr,m,f#Yr,r#Yf,o,Y#rf,Y#rf,Y#rf,m")
@@ -2379,16 +2465,34 @@
       return "#";
 
     case 5:
-      if (TARGET_ATHLON)
-        return "xorpd\t%0, %0";
-      else
-        return "pxor\t%0, %0";
+      switch (get_attr_mode (insn))
+	{
+	case MODE_V4SF:
+	  return "xorps\t%0, %0";
+	case MODE_V2DF:
+	  return "xorpd\t%0, %0";
+	case MODE_TI:
+	  return "pxor\t%0, %0";
+	default:
+	  abort ();
+	}
     case 6:
-      if (TARGET_PARTIAL_REG_DEPENDENCY)
-	return "movapd\t{%1, %0|%0, %1}";
+      switch (get_attr_mode (insn))
+	{
+	case MODE_V4SF:
+	  return "movaps\t{%1, %0|%0, %1}";
+	case MODE_V2DF:
+	  return "movapd\t{%1, %0|%0, %1}";
+	case MODE_DF:
+	  return "movsd\t{%1, %0|%0, %1}";
+	default:
+	  abort ();
+	}
+    case 7:
+      if (get_attr_mode (insn) == MODE_V2DF)
+	return "movlpd\t{%1, %0|%0, %1}";
       else
 	return "movsd\t{%1, %0|%0, %1}";
-    case 7:
     case 8:
       return "movsd\t{%1, %0|%0, %1}";
 
@@ -2397,7 +2501,42 @@
     }
 }
   [(set_attr "type" "fmov,fmov,fmov,multi,multi,ssemov,ssemov,ssemov,ssemov")
-   (set_attr "mode" "DF,DF,DF,SI,SI,TI,DF,DF,DF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "3,4")
+		 (const_string "SI")
+	       /* xorps is one byte shorter.  */
+	       (eq_attr "alternative" "5")
+		 (cond [(ne (symbol_ref "optimize_size")
+			    (const_int 0))
+			  (const_string "V4SF")
+			(ne (symbol_ref "TARGET_SSE_LOAD0_BY_PXOR")
+			    (const_int 0))
+			  (const_string "TI")]
+		       (const_string "V2DF"))
+	       /* For architectures resolving dependencies on
+		  whole SSE registers use APD move to break dependency
+		  chains, otherwise use short move to avoid extra work.  
+
+		  movaps encodes one byte shorter.  */
+	       (eq_attr "alternative" "6")
+		 (cond
+		  [(ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		     (const_string "V4SF")
+		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REG_DEPENDENCY")
+		       (const_int 0))
+		     (const_string "V2DF")]
+		   (const_string "DF"))
+	       /* For achitectures resolving dependencies on register
+		  parts we may avoid extra work to zero out upper part
+		  of register.  */
+	       (eq_attr "alternative" "7")
+		 (if_then_else
+		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+		       (const_int 0))
+		   (const_string "V2DF")
+		   (const_string "DF"))]
+	       (const_string "DF")))])
 
 (define_split
   [(set (match_operand:DF 0 "nonimmediate_operand" "")
@@ -3704,7 +3843,7 @@
 	(float_truncate:SF
 	 (match_operand:DF 1 "nonimmediate_operand" "f,f,f,f,mY")))
    (clobber (match_operand:SF 2 "memory_operand" "=X,m,m,m,X"))]
-  "TARGET_80387 && TARGET_SSE2"
+  "TARGET_80387 && TARGET_SSE2 && !TARGET_SSE_PARTIAL_REGS"
 {
   switch (which_alternative)
     {
@@ -3714,7 +3853,30 @@
       else
 	return "fst%z0\t%y0";
     case 4:
-      return "cvtsd2ss\t{%1, %0|%0, %1}";
+      return "#";
+    default:
+      abort ();
+    }
+}
+  [(set_attr "type" "fmov,multi,multi,multi,ssecvt")
+   (set_attr "mode" "SF,SF,SF,SF,DF")])
+
+(define_insn "*truncdfsf2_1_sse_nooverlap"
+  [(set (match_operand:SF 0 "nonimmediate_operand" "=*!m,?f#rx,?r#fx,?x#rf,&Y")
+	(float_truncate:SF
+	 (match_operand:DF 1 "nonimmediate_operand" "f,f,f,f,mY")))
+   (clobber (match_operand:SF 2 "memory_operand" "=X,m,m,m,X"))]
+  "TARGET_80387 && TARGET_SSE2 && TARGET_SSE_PARTIAL_REGS"
+{
+  switch (which_alternative)
+    {
+    case 0:
+      if (find_regno_note (insn, REG_DEAD, REGNO (operands[1])))
+	return "fstp%z0\t%y0";
+      else
+	return "fst%z0\t%y0";
+    case 4:
+      return "#";
     default:
       abort ();
     }
@@ -3726,7 +3888,7 @@
   [(set (match_operand:SF 0 "nonimmediate_operand" "=Y,!m")
 	(float_truncate:SF
 	 (match_operand:DF 1 "nonimmediate_operand" "mY,f")))]
-  "TARGET_80387 && TARGET_SSE2
+  "TARGET_80387 && TARGET_SSE2 && !TARGET_SSE_PARTIAL_REGS
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
 {
   switch (which_alternative)
@@ -3745,7 +3907,30 @@
   [(set_attr "type" "ssecvt,fmov")
    (set_attr "mode" "DF,SF")])
 
-(define_insn "truncdfsf2_3"
+(define_insn "*truncdfsf2_2_nooverlap"
+  [(set (match_operand:SF 0 "nonimmediate_operand" "=&Y,!m")
+	(float_truncate:SF
+	 (match_operand:DF 1 "nonimmediate_operand" "mY,f")))]
+  "TARGET_80387 && TARGET_SSE2 && TARGET_SSE_PARTIAL_REGS
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
+{
+  switch (which_alternative)
+    {
+    case 0:
+      return "#";
+    case 1:
+      if (find_regno_note (insn, REG_DEAD, REGNO (operands[1])))
+	return "fstp%z0\t%y0";
+      else
+	return "fst%z0\t%y0";
+    default:
+      abort ();
+    }
+}
+  [(set_attr "type" "ssecvt,fmov")
+   (set_attr "mode" "DF,SF")])
+
+(define_insn "*truncdfsf2_3"
   [(set (match_operand:SF 0 "memory_operand" "=m")
 	(float_truncate:SF
 	 (match_operand:DF 1 "register_operand" "f")))]
@@ -3763,8 +3948,17 @@
   [(set (match_operand:SF 0 "register_operand" "=Y")
 	(float_truncate:SF
 	 (match_operand:DF 1 "nonimmediate_operand" "mY")))]
-  "!TARGET_80387 && TARGET_SSE2"
+  "!TARGET_80387 && TARGET_SSE2 && !TARGET_SSE_PARTIAL_REGS"
   "cvtsd2ss\t{%1, %0|%0, %1}"
+  [(set_attr "type" "ssecvt")
+   (set_attr "mode" "DF")])
+
+(define_insn "*truncdfsf2_sse_only_nooverlap"
+  [(set (match_operand:SF 0 "register_operand" "=&Y")
+	(float_truncate:SF
+	 (match_operand:DF 1 "nonimmediate_operand" "mY")))]
+  "!TARGET_80387 && TARGET_SSE2 && TARGET_SSE_PARTIAL_REGS"
+  "#"
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "DF")])
 
@@ -3777,15 +3971,55 @@
   [(set (match_dup 0) (float_truncate:SF (match_dup 1)))]
   "")
 
+; Avoid possible reformating penalty on the destination by first
+; zeroing it out
 (define_split
-  [(set (match_operand:SF 0 "nonimmediate_operand" "")
+  [(set (match_operand:SF 0 "register_operand" "")
 	(float_truncate:SF
 	 (match_operand:DF 1 "nonimmediate_operand" "")))
    (clobber (match_operand 2 "" ""))]
   "TARGET_80387 && reload_completed
-   && !FP_REG_P (operands[0]) && !FP_REG_P (operands[1])"
-  [(set (match_dup 0) (float_truncate:SF (match_dup 1)))]
-  "")
+   && SSE_REG_P (operands[0])"
+  [(const_int 0)]
+{
+  rtx src, dest;
+  if (!TARGET_SSE_PARTIAL_REGS)
+    emit_insn (gen_truncdfsf2_sse_only (operands[0], operands[1]));
+  else
+    {
+      dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
+      src = simplify_gen_subreg (V2DFmode, operands[1], DFmode, 0);
+      /* simplify_gen_subreg refuses to widen memory references.  */
+      if (GET_CODE (src) == SUBREG)
+	alter_subreg (&src);
+      if (reg_overlap_mentioned_p (operands[0], operands[1]))
+	abort ();
+      emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
+      emit_insn (gen_cvtsd2ss (dest, dest, src));
+    }
+  DONE;
+})
+
+(define_split
+  [(set (match_operand:SF 0 "register_operand" "")
+	(float_truncate:SF
+	 (match_operand:DF 1 "nonimmediate_operand" "")))]
+  "TARGET_80387 && reload_completed
+   && SSE_REG_P (operands[0]) && TARGET_SSE_PARTIAL_REGS"
+  [(const_int 0)]
+{
+  rtx src, dest;
+  dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
+  src = simplify_gen_subreg (V2DFmode, operands[1], DFmode, 0);
+  /* simplify_gen_subreg refuses to widen memory references.  */
+  if (GET_CODE (src) == SUBREG)
+    alter_subreg (&src);
+  if (reg_overlap_mentioned_p (operands[0], operands[1]))
+    abort ();
+  emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
+  emit_insn (gen_cvtsd2ss (dest, dest, src));
+  DONE;
+})
 
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
@@ -4489,6 +4723,22 @@
    (set_attr "mode" "SF")
    (set_attr "fp_int_src" "true")])
 
+; Avoid possible reformating penalty on the destination by first
+; zeroing it out
+(define_split
+  [(set (match_operand:SF 0 "register_operand" "")
+	(float:SF (match_operand:SI 1 "nonimmediate_operand" "")))]
+  "TARGET_80387 && reload_completed
+   && SSE_REG_P (operands[0]) && TARGET_SSE_PARTIAL_REGS"
+  [(const_int 0)]
+{
+  rtx dest;
+  dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
+  emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
+  emit_insn (gen_cvtsi2ss (dest, dest, operands[1]));
+  DONE;
+})
+
 (define_expand "floatdisf2"
   [(set (match_operand:SF 0 "register_operand" "")
 	(float:SF (match_operand:DI 1 "nonimmediate_operand" "")))]
@@ -4526,6 +4776,22 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "SF")
    (set_attr "fp_int_src" "true")])
+
+; Avoid possible reformating penalty on the destination by first
+; zeroing it out
+(define_split
+  [(set (match_operand:SF 0 "register_operand" "")
+	(float:SF (match_operand:DI 1 "nonimmediate_operand" "")))]
+  "TARGET_80387 && reload_completed
+   && SSE_REG_P (operands[0]) && TARGET_SSE_PARTIAL_REGS"
+  [(const_int 0)]
+{
+  rtx dest;
+  dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
+  emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
+  emit_insn (gen_cvtsi2ssq (dest, dest, operands[1]));
+  DONE;
+})
 
 (define_insn "floathidf2"
   [(set (match_operand:DF 0 "register_operand" "=f,f")
@@ -9490,6 +9756,14 @@
 	(xor:TI (subreg:TI (match_dup 1) 0)
 		(subreg:TI (match_dup 2) 0)))]
 {
+  /* Avoid possible reformating on the operands.  */
+  if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
+    {
+      rtx op = gen_rtx_SUBREG (V2DFmode, operands[1], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+      op = gen_rtx_SUBREG (V2DFmode, operands[2], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+    }
   if (operands_match_p (operands[0], operands[2]))
     {
       rtx tmp;
@@ -9923,7 +10197,17 @@
   "reload_completed && SSE_REG_P (operands[0])"
   [(set (subreg:TI (match_dup 0) 0)
 	(and:TI (not:TI (subreg:TI (match_dup 2) 0))
-		(subreg:TI (match_dup 1) 0)))])
+		(subreg:TI (match_dup 1) 0)))]
+{
+  /* Avoid possible reformating on the operands.  */
+  if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
+    {
+      rtx op = gen_rtx_SUBREG (V2DFmode, operands[1], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+      op = gen_rtx_SUBREG (V2DFmode, operands[2], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+    }
+})
 
 
 ;; Keep 'f' and 'r' in separate alternatives to avoid reload problems
@@ -16594,6 +16878,14 @@
    (set (subreg:TI (match_dup 0) 0) (ior:TI (subreg:TI (match_dup 6) 0)
 					    (subreg:TI (match_dup 7) 0)))]
 {
+  if (GET_MODE (operands[2]) == DFmode
+      && TARGET_SSE_PARTIAL_REGS && !optimize_size)
+    {
+      rtx op = gen_rtx_SUBREG (V2DFmode, operands[2], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+      op = gen_rtx_SUBREG (V2DFmode, operands[3], 0);
+      emit_insn (gen_sse2_unpcklpd (op, op, op));
+    }
   /* If op2 == op3, op3 will be clobbered before it is used.
      This should be optimized out though.  */
   if (operands_match_p (operands[2], operands[3]))
@@ -16702,6 +16994,20 @@
    (set (subreg:TI (match_dup 0) 0) (and:TI (match_dup 6)
 					    (subreg:TI (match_dup 7) 0)))]
 {
+  if (TARGET_SSE_PARTIAL_REGS && !optimize_size
+      && GET_MODE (operands[2]) == DFmode)
+    {
+      if (REG_P (operands[2]))
+	{
+	  rtx op = gen_rtx_SUBREG (V2DFmode, operands[2], 0);
+	  emit_insn (gen_sse2_unpcklpd (op, op, op));
+	}
+      if (REG_P (operands[3]))
+	{
+	  rtx op = gen_rtx_SUBREG (V2DFmode, operands[3], 0);
+	  emit_insn (gen_sse2_unpcklpd (op, op, op));
+	}
+    }
   PUT_MODE (operands[1], GET_MODE (operands[0]));
   if (!sse_comparison_operator (operands[1], VOIDmode))
     {
@@ -17808,7 +18114,6 @@
   [(set (match_operand:V4SF 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V4SF 1 "nonimmediate_operand" "xm,x"))]
   "TARGET_SSE"
-  ;; @@@ let's try to use movaps here.
   "movaps\t{%1, %0|%0, %1}"
   [(set_attr "type" "ssemov")
    (set_attr "mode" "V4SF")])
@@ -17817,10 +18122,29 @@
   [(set (match_operand:V4SI 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V4SI 1 "nonimmediate_operand" "xm,x"))]
   "TARGET_SSE"
-  ;; @@@ let's try to use movaps here.
-  "movaps\t{%1, %0|%0, %1}"
+{
+  if (get_attr_mode (insn) == MODE_V4SF)
+    return "movaps\t{%1, %0|%0, %1}";
+  else
+    return "movdqa\t{%1, %0|%0, %1}";
+}
   [(set_attr "type" "ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "1")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "TI")))])
 
 (define_insn "movv8qi_internal"
   [(set (match_operand:V8QI 0 "nonimmediate_operand" "=y,m")
@@ -17870,28 +18194,85 @@
   [(set (match_operand:V2DF 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V2DF 1 "general_operand" "xm,x"))]
   "TARGET_SSE2"
-  ;; @@@ let's try to use movaps here.
-  "movapd\t{%1, %0|%0, %1}"
+{
+  if (get_attr_mode (insn) == MODE_V4SF)
+    return "movaps\t{%1, %0|%0, %1}";
+  else
+    return "movapd\t{%1, %0|%0, %1}";
+}
   [(set_attr "type" "ssemov")
-   (set_attr "mode" "V2DF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "V2DF"))
+	       (eq_attr "alternative" "1")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "V2DF"))]
+	       (const_string "V2DF")))])
 
 (define_insn "movv8hi_internal"
   [(set (match_operand:V8HI 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V8HI 1 "general_operand" "xm,x"))]
   "TARGET_SSE2"
-  ;; @@@ let's try to use movaps here.
-  "movaps\t{%1, %0|%0, %1}"
+{
+  if (get_attr_mode (insn) == MODE_V4SF)
+    return "movaps\t{%1, %0|%0, %1}";
+  else
+    return "movdqa\t{%1, %0|%0, %1}";
+}
   [(set_attr "type" "ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "1")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "TI")))])
 
 (define_insn "movv16qi_internal"
   [(set (match_operand:V16QI 0 "nonimmediate_operand" "=x,m")
 	(match_operand:V16QI 1 "general_operand" "xm,x"))]
   "TARGET_SSE2"
-  ;; @@@ let's try to use movaps here.
-  "movaps\t{%1, %0|%0, %1}"
+{
+  if (get_attr_mode (insn) == MODE_V4SF)
+    return "movaps\t{%1, %0|%0, %1}";
+  else
+    return "movdqa\t{%1, %0|%0, %1}";
+}
   [(set_attr "type" "ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "1")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "TI")))])
 
 (define_expand "movv2df"
   [(set (match_operand:V2DF 0 "general_operand" "")
@@ -18088,26 +18469,83 @@
   [(set (match_operand:TI 0 "nonimmediate_operand" "=x,x,m")
 	(match_operand:TI 1 "general_operand" "O,xm,x"))]
   "TARGET_SSE && !TARGET_64BIT"
-  "@
-   xorps\t%0, %0
-   movaps\t{%1, %0|%0, %1}
-   movaps\t{%1, %0|%0, %1}"
+{
+  switch (which_alternative)
+    {
+    case 0:
+      if (get_attr_mode (insn) == MODE_V4SF)
+	return "xorps\t%0, %0";
+      else
+	return "pxor\t%0, %0";
+    case 1:
+    case 2:
+      if (get_attr_mode (insn) == MODE_V4SF)
+	return "movaps\t{%1, %0|%0, %1}";
+      else
+	return "movdqa\t{%1, %0|%0, %1}";
+    default:
+      abort ();
+    }
+}
   [(set_attr "type" "ssemov,ssemov,ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "0,1")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "2")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "TI")))])
 
 (define_insn "*movti_rex64"
   [(set (match_operand:TI 0 "nonimmediate_operand" "=r,o,x,mx,x")
 	(match_operand:TI 1 "general_operand" "riFo,riF,O,x,m"))]
   "TARGET_64BIT
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
-  "@
-   #
-   #
-   xorps\t%0, %0
-   movaps\\t{%1, %0|%0, %1}
-   movaps\\t{%1, %0|%0, %1}"
+{
+  switch (which_alternative)
+    {
+    case 0:
+    case 1:
+      return "#";
+    case 2:
+      if (get_attr_mode (insn) == MODE_V4SF)
+	return "xorps\t%0, %0";
+      else
+	return "pxor\t%0, %0";
+    case 3:
+    case 4:
+      if (get_attr_mode (insn) == MODE_V4SF)
+	return "movaps\t{%1, %0|%0, %1}";
+      else
+	return "movdqa\t{%1, %0|%0, %1}";
+    default:
+      abort ();
+    }
+}
   [(set_attr "type" "*,*,ssemov,ssemov,ssemov")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+        (cond [(eq_attr "alternative" "2,3")
+		 (if_then_else
+		   (ne (symbol_ref "optimize_size")
+		       (const_int 0))
+		   (const_string "V4SF")
+		   (const_string "TI"))
+	       (eq_attr "alternative" "4")
+		 (if_then_else
+		   (ior (ne (symbol_ref "TARGET_SSE_TYPELESS_STORES")
+			    (const_int 0))
+			(ne (symbol_ref "optimize_size")
+			    (const_int 0)))
+		   (const_string "V4SF")
+		   (const_string "TI"))]
+	       (const_string "DI")))])
 
 (define_split
   [(set (match_operand:TI 0 "nonimmediate_operand" "")
@@ -18707,12 +19145,26 @@
 ;; this insn.
 (define_insn "sse_clrv4sf"
   [(set (match_operand:V4SF 0 "register_operand" "=x")
-        (unspec:V4SF [(const_int 0)] UNSPEC_NOP))]
+	(match_operand:V4SF 1 "const0_operand" "X"))]
   "TARGET_SSE"
-  "xorps\t{%0, %0|%0, %0}"
+{
+  if (get_attr_mode (insn) == MODE_TI)
+    return "pxor\t{%0, %0|%0, %0}";
+  else
+    return "xorps\t{%0, %0|%0, %0}";
+}
   [(set_attr "type" "sselog")
    (set_attr "memory" "none")
-   (set_attr "mode" "V4SF")])
+   (set (attr "mode")
+	(if_then_else
+	   (and (and (ne (symbol_ref "TARGET_SSE_LOAD0_BY_PXOR")
+			 (const_int 0))
+		     (ne (symbol_ref "TARGET_SSE2")
+			 (const_int 0)))
+		(eq (symbol_ref "optimize_size")
+		    (const_int 0)))
+	 (const_string "TI")
+	 (const_string "V4SF")))])
 
 ;; SSE mask-generating compares
 
@@ -18933,6 +19385,18 @@
 	 (const_int 14)))]
   "TARGET_SSE"
   "cvtsi2ss\t{%2, %0|%0, %2}"
+  [(set_attr "type" "ssecvt")
+   (set_attr "mode" "SF")])
+
+(define_insn "cvtsi2ssq"
+  [(set (match_operand:V4SF 0 "register_operand" "=x")
+	(vec_merge:V4SF
+	 (match_operand:V4SF 1 "register_operand" "0")
+	 (vec_duplicate:V4SF
+	  (float:SF (match_operand:DI 2 "nonimmediate_operand" "rm")))
+	 (const_int 14)))]
+  "TARGET_SSE && TARGET_64BIT"
+  "cvtsi2ssq\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "SF")])
 
@@ -20584,7 +21048,7 @@
 	(vec_merge:V4SF (match_operand:V4SF 1 "register_operand" "0")
 	 		(vec_duplicate:V4SF
 			  (float_truncate:V2SF
-			    (match_operand:V2DF 2 "register_operand" "xm")))
+			    (match_operand:V2DF 2 "nonimmediate_operand" "xm")))
 			(const_int 14)))]
   "TARGET_SSE2"
   "cvtsd2ss\t{%2, %0|%0, %2}"
@@ -20596,7 +21060,7 @@
 	(vec_merge:V2DF (match_operand:V2DF 1 "register_operand" "0")
 	 		(float_extend:V2DF
 			  (vec_select:V2SF
-			    (match_operand:V4SF 2 "register_operand" "xm")
+			    (match_operand:V4SF 2 "nonimmediate_operand" "xm")
 			    (parallel [(const_int 0)
 				       (const_int 1)])))
 			(const_int 2)))]
@@ -20872,10 +21336,20 @@
 (define_insn "sse2_clrti"
   [(set (match_operand:TI 0 "register_operand" "=x") (const_int 0))]
   "TARGET_SSE2"
-  "pxor\t{%0, %0|%0, %0}"
-  [(set_attr "type" "sseiadd")
+{
+  if (get_attr_mode (insn) == MODE_TI)
+    return "pxor\t%0, %0";
+  else
+    return "xorps\t%0, %0";
+}
+  [(set_attr "type" "ssemov")
    (set_attr "memory" "none")
-   (set_attr "mode" "TI")])
+   (set (attr "mode")
+	      (if_then_else
+		(ne (symbol_ref "optimize_size")
+		    (const_int 0))
+		(const_string "V4SF")
+		(const_string "TI")))])
 
 ;; MMX unsigned averages/sum of absolute differences
 
