--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Richard Henderson  <rth@redhat.com>
+
+	* dwarf2out.c (loc_descriptor_from_tree): Relax requirement
+	for TLS debug info to !DECL_EXTERNAL.
+
 Thu Oct  3 23:15:15 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (CPP_SPECS): fix defines for -msse, -msse2, -mpentium2,3.
