--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-10-01  Richard Henderson  <rth@redhat.com>
 
+	* calls.c (precompute_register_parameters): Force non-legitimate
+	constants into pseudos.
+
+2002-10-01  Richard Henderson  <rth@redhat.com>
+
 	* dwarf2out.c (loc_descriptor_from_tree): Relax requirement
 	for TLS debug info to !DECL_EXTERNAL.
 
