--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.am (all-multi): Fix multilib parallel build.
+
 2002-09-30  Bo Thorsen  <bo@suse.de>
 
 	* sysdep/x86-64/locks.h (compare_and_swap): Fix multilib support.
