* i386.h (BIGGEST_FIELD_ALIGNMENT): Set proper default for x86_64.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@57933 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 27 22:26:35 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (BIGGEST_FIELD_ALIGNMENT): Set proper default for x86_64.
+
 Thu Oct  3 15:15:00 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (lea to mul peep2): Fix condition.
