--- a/boehm-gc/ChangeLog
+++ b/boehm-gc/ChangeLog
@@ -1,3 +1,20 @@
+2002-10-02  Andreas Jaeger  <aj@suse.de>
+
+	* include/private/gcconfig.h (HBLKSIZE): Define for x86-64.
+
+2002-09-27  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* include/private/gcconfig: Add machine type S390.  Add s390x support.
+	* include/private/gc_locks.h (GC_test_and_set): Implement for s390.
+	(GC_compare_and_exchange): Likewise.
+
+2002-07-18  Bo Thorsen  <bo@suse.de>
+
+	* include/private/gcconfig.h: Add x86-64 definitions.
+	* os_dep.c: Add x86-64 support.
+	* configure.in: Likewise.
+	* configure: Regenerate.
+
 2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.am (all-multi): Fix multilib parallel build.
