PR target/7434 	* i386.c (ix86_split_long_move): Fix modes in the precomputed address 	references.
	* gcc.c-torture/compile/20021008-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@57937 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Aug 10 22:14:41 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	PR target/7434
+	* i386.c (ix86_split_long_move): Fix modes in the precomputed address
+	references.
+
 Tue Aug 27 22:26:35 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (BIGGEST_FIELD_ALIGNMENT): Set proper default for x86_64.
