--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 23 14:24:25 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (ix86_output_addr_diff_elt): Avoid x86_64 binutils bug
+	workaround.
+
 Sat Aug 10 22:14:41 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	PR target/7434
