--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -388,7 +388,10 @@
 */
 
 (automata_option "ndfa")
-(automata_option "v")
+
+;; Uncomment the following line to output automata for debugging.
+;; (automata_option "v")
+
 (automata_option "w")
 
 ;;============================================================================
