--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 16 12:22:44 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (movss, movsd): Use xorps/xorpd for Athlon.
+
 Tue Apr 23 14:24:25 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (ix86_output_addr_diff_elt): Avoid x86_64 binutils bug
