--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -2767,7 +2767,7 @@
     case 4:
       return "mov{l}\t{%1, %0|%0, %1}";
     case 5:
-      if (TARGET_SSE2)
+      if (TARGET_SSE2 && !TARGET_ATHLON)
 	return "pxor\t%0, %0";
       else
 	return "xorps\t%0, %0";
@@ -2953,7 +2953,10 @@
     case 4:
       return "#";
     case 5:
-      return "pxor\t%0, %0";
+      if (TARGET_ATHLON)
+	return "xorpd\t%0, %0";
+      else
+	return "pxor\t%0, %0";
     case 6:
       if (TARGET_PARTIAL_REG_DEPENDENCY)
 	return "movapd\t{%1, %0|%0, %1}";
@@ -3012,7 +3015,10 @@
       return "#";
 
     case 5:
-      return "pxor\t%0, %0";
+      if (TARGET_ATHLON)
+	return "xorpd\t%0, %0";
+      else
+	return "pxor\t%0, %0";
     case 6:
       if (TARGET_PARTIAL_REG_DEPENDENCY)
 	return "movapd\t{%1, %0|%0, %1}";
