--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -91,6 +91,10 @@
 ;; ::
 ;; ::::::::::::::::::::
 
+;; Processor type.  This attribute must exactly match the processor_type
+;; enumeration in ia64.h.
+(define_attr "cpu" "itanium,itanium2" (const (symbol_ref "ia64_cpu")))
+
 ;; Instruction type.  This primarily determines how instructions can be
 ;; packed in bundles, and secondarily affects scheduling to function units.
 
@@ -713,174 +717,218 @@
 (define_reservation "1_A" "1_M|1_I")
 
 (define_insn_reservation "1_stop_bit" 0
-  (and (eq_attr "itanium_class" "stop_bit")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "stop_bit"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_stop|1_m0_stop|1_m1_stop|1_mi0_stop|1_mi1_stop")
 
 (define_insn_reservation "1_br"      0
-  (and (eq_attr "itanium_class" "br")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "br"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_B")
 (define_insn_reservation "1_scall"   0
-  (and (eq_attr "itanium_class" "scall")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "scall"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_B")
 (define_insn_reservation "1_fcmp"    2
-  (and (eq_attr "itanium_class" "fcmp")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fcmp"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_F+1_not_uf1")
 (define_insn_reservation "1_fcvtfx"  7
-  (and (eq_attr "itanium_class" "fcvtfx")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fcvtfx"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_F")
 (define_insn_reservation "1_fld"     9
-  (and (eq_attr "itanium_class" "fld")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fld"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_fmac"    5
-  (and (eq_attr "itanium_class" "fmac")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fmac"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_F")
 (define_insn_reservation "1_fmisc"   5
-  (and (eq_attr "itanium_class" "fmisc")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fmisc"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_F+1_not_uf1")
 
 ;; There is only one insn `mov = ar.bsp' for frar_i:
 (define_insn_reservation "1_frar_i" 13
-  (and (eq_attr "itanium_class" "frar_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frar_i"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 ;; There is only two insns `mov = ar.unat' or `mov = ar.ccv' for frar_m:
 (define_insn_reservation "1_frar_m"  6
-  (and (eq_attr "itanium_class" "frar_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frar_m"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M+1_not_um1")
 (define_insn_reservation "1_frbr"    2
-  (and (eq_attr "itanium_class" "frbr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frbr"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 (define_insn_reservation "1_frfr"    2
-  (and (eq_attr "itanium_class" "frfr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frfr"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M+1_not_um1")
 (define_insn_reservation "1_frpr"    2
-  (and (eq_attr "itanium_class" "frpr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frpr"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 
 (define_insn_reservation "1_ialu"      1
-    (and (eq_attr "itanium_class" "ialu")
+    (and (and (eq_attr "cpu" "itanium")
+              (eq_attr "itanium_class" "ialu"))
          (eq (symbol_ref
               "bundling_p || ia64_produce_address_p (insn)")
               (const_int 0)))
     "1_A")
 (define_insn_reservation "1_ialu_addr" 1
-    (and (eq_attr "itanium_class" "ialu")
+    (and (and (eq_attr "cpu" "itanium")
+              (eq_attr "itanium_class" "ialu"))
          (eq (symbol_ref
               "!bundling_p && ia64_produce_address_p (insn)")
              (const_int 1)))
     "1_M")
 (define_insn_reservation "1_icmp"    1
-  (and (eq_attr "itanium_class" "icmp")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "icmp"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_A")
 (define_insn_reservation "1_ilog"    1
-  (and (eq_attr "itanium_class" "ilog")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ilog"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_A")
 (define_insn_reservation "1_ishf"    1
-  (and (eq_attr "itanium_class" "ishf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ishf"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
     "1_I+1_not_ui1")
 (define_insn_reservation "1_ld"      2
-  (and (eq_attr "itanium_class" "ld")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ld"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_long_i"  1
-  (and (eq_attr "itanium_class" "long_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "long_i"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_L")
 (define_insn_reservation "1_mmmul"   2
-  (and (eq_attr "itanium_class" "mmmul")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmmul"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 (define_insn_reservation "1_mmshf"   2
-  (and (eq_attr "itanium_class" "mmshf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmshf"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_I")
 (define_insn_reservation "1_mmshfi"  1
-  (and (eq_attr "itanium_class" "mmshfi")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmshfi"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_I")
 
 ;; Now we have only one insn (flushrs) of such class.  We assume that flushrs
 ;; is the 1st syllable of the bundle after stop bit.
 (define_insn_reservation "1_rse_m"   0
-  (and (eq_attr "itanium_class" "rse_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "rse_m"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "(1_0m.ii|1_0m.mi|1_0m.fi|1_0m.mf|1_0b.bb|1_0m.bb\
     |1_0m.ib|1_0m.mb|1_0m.fb|1_0m.lx)+1_um0")
 (define_insn_reservation "1_sem"     0
-  (and (eq_attr "itanium_class" "sem")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "sem"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M+1_not_um1")
 (define_insn_reservation "1_stf"     1
-  (and (eq_attr "itanium_class" "stf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "stf"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_st"      1
-  (and (eq_attr "itanium_class" "st")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "st"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_syst_m0" 0
-  (and (eq_attr "itanium_class" "syst_m0")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "syst_m0"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M+1_not_um1")
 (define_insn_reservation "1_syst_m"  0
-  (and (eq_attr "itanium_class" "syst_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "syst_m"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_tbit"    1
-  (and (eq_attr "itanium_class" "tbit")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tbit"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 
 ;; There is only ony insn `mov ar.pfs =' for toar_i:
 (define_insn_reservation "1_toar_i"  0
-  (and (eq_attr "itanium_class" "toar_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "toar_i"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 ;; There are only ony 2 insns `mov ar.ccv =' and `mov ar.unat =' for toar_m:
 (define_insn_reservation "1_toar_m"  5
-  (and (eq_attr "itanium_class" "toar_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "toar_m"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M+1_not_um1")
 (define_insn_reservation "1_tobr"    1
-  (and (eq_attr "itanium_class" "tobr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tobr"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 (define_insn_reservation "1_tofr"    9
-  (and (eq_attr "itanium_class" "tofr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tofr"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 (define_insn_reservation "1_topr"    1
-  (and (eq_attr "itanium_class" "topr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "topr"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_I+1_not_ui1")
 (define_insn_reservation "1_xmpy"    7
-  (and (eq_attr "itanium_class" "xmpy")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "xmpy"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_F")
 (define_insn_reservation "1_xtd"     1
-  (and (eq_attr "itanium_class" "xtd")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "xtd"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_I")
 
 (define_insn_reservation "1_chk_s"   0
-  (and (eq_attr "itanium_class" "chk_s")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "chk_s"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_A")
 (define_insn_reservation "1_lfetch"  0
-  (and (eq_attr "itanium_class" "lfetch")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "lfetch"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M")
 
 (define_insn_reservation "1_nop_m"   0
-  (and (eq_attr "itanium_class" "nop_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_m"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_M0")
 (define_insn_reservation "1_nop_b"   0
-  (and (eq_attr "itanium_class" "nop_b")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_b"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_NB")
 (define_insn_reservation "1_nop_i"   0
-  (and (eq_attr "itanium_class" "nop_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_i"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_I0")
 (define_insn_reservation "1_nop_f"   0
-  (and (eq_attr "itanium_class" "nop_f")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_f"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_F0")
 (define_insn_reservation "1_nop_x"   0
-  (and (eq_attr "itanium_class" "nop_x")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_x"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_L0")
 
 ;; We assume that there is no insn issued on the same cycle as unknown insn.
@@ -890,16 +938,19 @@
      1_0m.lx")
 
 (define_insn_reservation "1_unknown" 1
-  (and (eq_attr "itanium_class" "unknown")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "unknown"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "1_empty")
 
 (define_insn_reservation "1_nop" 1
-  (and (eq_attr "itanium_class" "nop")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop"))
        (eq (symbol_ref "bundling_p") (const_int 0)))
   "1_M0|1_NB|1_I0|1_F0")
 
 (define_insn_reservation "1_ignore" 0
-  (and (eq_attr "itanium_class" "ignore")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ignore"))
        (eq (symbol_ref "bundling_p") (const_int 0))) "nothing")
 
 
@@ -1042,7 +1093,8 @@
 (exclusion_set "1_bb_cont_only" "1_0bbb.")
 
 (define_insn_reservation "1_pre_cycle" 0
-   (and (eq_attr "itanium_class" "pre_cycle")
+   (and (and (eq_attr "cpu" "itanium")
+             (eq_attr "itanium_class" "pre_cycle"))
         (eq (symbol_ref "bundling_p") (const_int 0)))
                          "(1_0m_bs, 1_m_cont)                     \
                           | (1_0mi_bs, (1_mi_cont|nothing))       \
@@ -1539,177 +1591,225 @@
 (define_reservation "1b_A" "1b_M|1b_I")
 
 (define_insn_reservation "1b_stop_bit" 0
-  (and (eq_attr "itanium_class" "stop_bit")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "stop_bit"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_stop|1b_m0_stop|1b_m1_stop|1b_mi0_stop|1b_mi1_stop")
 (define_insn_reservation "1b_br"      0
-  (and (eq_attr "itanium_class" "br")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "br"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_B")
 (define_insn_reservation "1b_scall"   0
-  (and (eq_attr "itanium_class" "scall")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "scall"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_B")
 (define_insn_reservation "1b_fcmp"    2
-  (and (eq_attr "itanium_class" "fcmp")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fcmp"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_F+1b_not_uf1")
 (define_insn_reservation "1b_fcvtfx"  7
-  (and (eq_attr "itanium_class" "fcvtfx")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fcvtfx"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_F")
 (define_insn_reservation "1b_fld"     9
-  (and (eq_attr "itanium_class" "fld")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fld"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_fmac"    5
-  (and (eq_attr "itanium_class" "fmac")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fmac"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_F")
 (define_insn_reservation "1b_fmisc"   5
-  (and (eq_attr "itanium_class" "fmisc")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "fmisc"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_F+1b_not_uf1")
 (define_insn_reservation "1b_frar_i" 13
-  (and (eq_attr "itanium_class" "frar_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frar_i"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_frar_m"  6
-  (and (eq_attr "itanium_class" "frar_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frar_m"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M+1b_not_um1")
 (define_insn_reservation "1b_frbr"    2
-  (and (eq_attr "itanium_class" "frbr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frbr"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_frfr"    2
-  (and (eq_attr "itanium_class" "frfr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frfr"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M+1b_not_um1")
 (define_insn_reservation "1b_frpr"    2
-  (and (eq_attr "itanium_class" "frpr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "frpr"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_ialu"      1
-    (and (eq_attr "itanium_class" "ialu")
+    (and (and (eq_attr "cpu" "itanium")
+              (eq_attr "itanium_class" "ialu"))
          (ne (symbol_ref
 	      "bundling_p && !ia64_produce_address_p (insn)")
              (const_int 0)))
     "1b_A")
 (define_insn_reservation "1b_ialu_addr" 1
-    (and (eq_attr "itanium_class" "ialu")
+    (and (and (eq_attr "cpu" "itanium")
+              (eq_attr "itanium_class" "ialu"))
          (eq (symbol_ref
               "bundling_p && ia64_produce_address_p (insn)")
              (const_int 1)))
     "1b_M")
 (define_insn_reservation "1b_icmp"    1
-  (and (eq_attr "itanium_class" "icmp")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "icmp"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_A")
 (define_insn_reservation "1b_ilog"    1
-  (and (eq_attr "itanium_class" "ilog")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ilog"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_A")
 (define_insn_reservation "1b_ishf"    1
-  (and (eq_attr "itanium_class" "ishf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ishf"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_ld"      2
-  (and (eq_attr "itanium_class" "ld")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ld"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_long_i"  1
-  (and (eq_attr "itanium_class" "long_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "long_i"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_L")
 (define_insn_reservation "1b_mmmul"   2
-  (and (eq_attr "itanium_class" "mmmul")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmmul"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_mmshf"   2
-  (and (eq_attr "itanium_class" "mmshf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmshf"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_I")
 (define_insn_reservation "1b_mmshfi"  2
-  (and (eq_attr "itanium_class" "mmshfi")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "mmshfi"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_I")
 (define_insn_reservation "1b_rse_m"   0
-  (and (eq_attr "itanium_class" "rse_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "rse_m"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
    "(1b_0m.ii|1b_0m.mi|1b_0m.fi|1b_0m.mf|1b_0b.bb|1b_0m.bb\
      |1b_0m.ib|1b_0m.mb|1b_0m.fb|1b_0m.lx)+1_1+1b_um0")
 (define_insn_reservation "1b_sem"     0
-  (and (eq_attr "itanium_class" "sem")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "sem"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M+1b_not_um1")
 (define_insn_reservation "1b_stf"     1
-  (and (eq_attr "itanium_class" "stf")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "stf"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_st"      1
-  (and (eq_attr "itanium_class" "st")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "st"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_syst_m0" 0
-  (and (eq_attr "itanium_class" "syst_m0")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "syst_m0"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M+1b_not_um1")
 (define_insn_reservation "1b_syst_m"  0
-  (and (eq_attr "itanium_class" "syst_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "syst_m"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_tbit"    1
-  (and (eq_attr "itanium_class" "tbit")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tbit"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_toar_i"  0
-  (and (eq_attr "itanium_class" "toar_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "toar_i"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_toar_m"  5
-  (and (eq_attr "itanium_class" "toar_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "toar_m"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M+1b_not_um1")
 (define_insn_reservation "1b_tobr"    1
-  (and (eq_attr "itanium_class" "tobr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tobr"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_tofr"    9
-  (and (eq_attr "itanium_class" "tofr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "tofr"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_topr"    1
-  (and (eq_attr "itanium_class" "topr")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "topr"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_I+1b_not_ui1")
 (define_insn_reservation "1b_xmpy"    7
-  (and (eq_attr "itanium_class" "xmpy")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "xmpy"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_F")
 (define_insn_reservation "1b_xtd"     1
-  (and (eq_attr "itanium_class" "xtd")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "xtd"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_I")
 (define_insn_reservation "1b_chk_s"   0
-  (and (eq_attr "itanium_class" "chk_s")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "chk_s"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_A")
 (define_insn_reservation "1b_lfetch"  0
-  (and (eq_attr "itanium_class" "lfetch")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "lfetch"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_nop_m"   0
-  (and (eq_attr "itanium_class" "nop_m")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_m"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_M")
 (define_insn_reservation "1b_nop_b"   0
-  (and (eq_attr "itanium_class" "nop_b")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_b"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_NB")
 (define_insn_reservation "1b_nop_i"   0
-  (and (eq_attr "itanium_class" "nop_i")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_i"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_I")
 (define_insn_reservation "1b_nop_f"   0
-  (and (eq_attr "itanium_class" "nop_f")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_f"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_F")
 (define_insn_reservation "1b_nop_x"   0
-  (and (eq_attr "itanium_class" "nop_x")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop_x"))
        (ne (symbol_ref "bundling_p") (const_int 0))) "1b_L")
 (define_insn_reservation "1b_unknown" 1
-  (and (eq_attr "itanium_class" "unknown")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "unknown"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_empty")
 (define_insn_reservation "1b_nop" 1
-  (and (eq_attr "itanium_class" "nop")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "nop"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "1b_M|1b_NB|1b_I|1b_F")
 (define_insn_reservation "1b_ignore" 0
-  (and (eq_attr "itanium_class" "ignore")
+  (and (and (eq_attr "cpu" "itanium")
+            (eq_attr "itanium_class" "ignore"))
        (ne (symbol_ref "bundling_p") (const_int 0)))
   "nothing")
 
 (define_insn_reservation "1b_pre_cycle" 0
-   (and (eq_attr "itanium_class" "pre_cycle")
+   (and (and (eq_attr "cpu" "itanium")
+             (eq_attr "itanium_class" "pre_cycle"))
         (ne (symbol_ref "bundling_p") (const_int 0)))
                          "(1b_0m_bs, 1b_m_cont)     \
                           | (1b_0mi_bs, 1b_mi_cont) \
