* i386.h (MACHINE_DEPENDENT_REORG): New macro. 	* i386.c (x86_machine_dependent_reorg): New function. 	* i386-protos.h (x86_machine_dependent_reorg): Declare.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@57957 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jul 17 00:19:20 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (MACHINE_DEPENDENT_REORG): New macro.
+	* i386.c (x86_machine_dependent_reorg): New function.
+	* i386-protos.h (x86_machine_dependent_reorg): Declare.
+
 Tue Jul 16 12:22:44 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (movss, movsd): Use xorps/xorpd for Athlon.
